--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ description: The world's what U create
 header-img:
   - url: img/home-bg/1.jpg
     mask: rgba(40, 57, 101, .4)
-  - url: img/home-bg/2.jpg
+  - url: img/home-bg/bg2.jpg
     mask: rgba(31, 64, 87, .2)
-  - url: img/home-bg/3.jpg
+  - url: img/home-bg/bg3.webp
     mask: rgba(68, 74, 83, .1)
-  - url: img/home-bg/4.jpg
+  - url: img/home-bg/bg4.jpg
     mask: rgba(19, 75, 50, .2)
 ---
 
