--- a/about.html
+++ b/about.html
@@ -2,17 +2,16 @@
 layout: about
 title: About
 header-style: text
-avatar: img/avatar.png
-my-name: God of Universe
-also-called: 宇宙之神
+avatar: img/prateek_avtar2.gif
+my-name: Just me and the planets
 
 interests:
-  - Sleeping and Eating
+  - Space
   - Video Games
-  - <s>Coding</s>
+  - Physics
 
 education:
   - degree: Wizard, Gryffindor
-    year: 2020
+    year: 2022
     school: Hogwarts School of Witchcraft and Wizardry
 ---
