--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@ comment: false
 links:
   - type: Me
     items:
-      - sitename: Renovamen
-        url: https://renovamen.ink
-        img: /img/links/me.png
+      - sitename: Prateek Raikar
+        url: https://seeker316.github.io
+        img: /img/prateek_avtar2.gif
         desc: My blog
 ---
