--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 title: Archive
 layout: default
 description: Black Sheep Wall
-header-img: "img/tag.jpg"
+header-img: "img/archi.png"
 header-mask: rgba(211, 136, 37, .5)
 ---
 
