--- a/about.html
+++ b/about.html
@@ -11,7 +11,5 @@ interests:
   - Physics
 
 education:
-  - degree: Wizard, Gryffindor
-    year: 2022
-    school: Hogwarts School of Witchcraft and Wizardry
+  - school: THE INTERNET SCHOOL OF EVERYTHING
 ---
