--- a/music.html
+++ b/music.html
@@ -3,10 +3,10 @@ layout: music
 title: Music
 header-style: text
 avatar: img/music3.gif
-my-name: Heavy Metal
+my-name: MUSIC
 
 interests:
-  - Hip-Hop
+  - [Hip-Hop](https://google.com)
   - EDM
   - Heavy Metal
 
