--- a/music.html
+++ b/music.html
@@ -6,7 +6,7 @@ avatar: img/music3.gif
 my-name: MUSIC
 
 interests:
-  - [Hip-Hop](https://google.com)
+  - <a href="https://google.com">Hip-Hop</a>
   - EDM
   - Heavy Metal
 
