--- a/inventory.html
+++ b/inventory.html
@@ -1,1 +1,16 @@
+---
+layout: links
+title: Links
+description: When you are looking at the stars, please put the brightest star shining night sky as my soul.
+header-img: "img/links.jpg"
+header-mask: rgba(97, 80, 73, 0.4)
+comment: false
 
+links:
+  - type: Me
+    items:
+      - sitename: Prateek Raikar
+        url: https://seeker316.github.io
+        img: /img/prateek_avtar2.gif
+        desc: My blog
+---
