--- a/inventory.html
+++ b/inventory.html
@@ -1,16 +1,20 @@
 ---
 layout: links
-title: Links
+title: Inventory
 description: When you are looking at the stars, please put the brightest star shining night sky as my soul.
 header-img: "img/links.jpg"
 header-mask: rgba(97, 80, 73, 0.4)
 comment: false
 
 links:
-  - type: Me
+  - type: Books
     items:
-      - sitename: Prateek Raikar
-        url: https://seeker316.github.io
+      - sitename: Example Book
+        url: https://google.com
         img: /img/prateek_avtar2.gif
-        desc: My blog
+        desc: Example book
+      - sitename: Example book2
+        url: https://o5wald.github.io
+        img: /img/prateek_avtar2.gif
+        desc: Example book 2
 ---
