--- a/inventory.html
+++ b/inventory.html
@@ -1,6 +1,6 @@
 ---
 layout: links
-title: Inventory
+title: Room of Requirements
 description: When you are looking at the stars, please put the brightest star shining night sky as my soul.
 header-img: "img/links.jpg"
 header-mask: rgba(97, 80, 73, 0.4)
