--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@ comment: false
 links:
   - type: Me
     items:
-      - sitename: Prateek Raikar
-        url: https://seeker316.github.io
+      - sitename: Oswald's Blog
+        url: https://o5wald.github.io
         img: /img/prateek_avtar2.gif
-        desc: My blog
+        desc: Oswald's Blog
 ---
