--- a/links.html
+++ b/links.html
@@ -7,10 +7,10 @@ header-mask: rgba(97, 80, 73, 0.4)
 comment: false
 
 links:
-  - type: Me
+  - type: My Friend's Blog
     items:
       - sitename: Oswald's Blog
         url: https://o5wald.github.io
-        img: /img/prateek_avtar2.gif
+        img: /img/logo.gif
         desc: Oswald's Blog
 ---
