--- a/links.html
+++ b/links.html
@@ -7,7 +7,7 @@ header-mask: rgba(97, 80, 73, 0.4)
 comment: false
 
 links:
-  - type: My Friend's Blog
+  - type: Other Blogs
     items:
       - sitename: Oswald's Blog
         url: https://o5wald.github.io
