--- a/music.html
+++ b/music.html
@@ -1,13 +1,20 @@
 ---
-layout: music
+layout: links
 title: Music
-header-style: text
-avatar: img/music3.gif
-my-name: MUSIC
+description: Music is my drug,  and these are some hits for you...
+header-img: "img/library.jpg"
+header-mask: rgba(97, 80, 73, 0.4)
+comment: false
 
-interests:
-  - <a href="https://google.com">Hip-Hop</a>
-  - EDM
-  - Heavy Metal
-
+links:
+  - type: Books
+    items:
+      - sitename: Heavy Metal Playlist
+        url: https://google.com
+        img: /img/prateek_avtar2.gif
+        desc: artist1,artist2,artist3......
+      - sitename: EDM Playlist
+        url: https://o5wald.github.io
+        img: /img/prateek_avtar2.gif
+        desc: artist1,artist2,artist3......
 ---
