--- a/music.html
+++ b/music.html
@@ -7,7 +7,7 @@ header-mask: rgba(97, 80, 73, 0.4)
 comment: false
 
 links:
-  - type: Books
+  - type: Playlists
     items:
       - sitename: Heavy Metal Playlist
         url: https://google.com
