--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 ---
 layout: links
 title: Music
-description: Music is my drug,  and these are some hits for you...
+description: Music is my drug,  and here are some hits for you...
 header-img: "img/library.jpg"
 header-mask: rgba(97, 80, 73, 0.4)
 comment: false
