--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 layout: links
 title: Music
 description: Music is my drug,  and here are some hits for you...
-header-img: "img/library.jpg"
+header-img: "img/music.jpg"
 header-mask: rgba(97, 80, 73, 0.4)
 comment: false
 
