--- a/about.html
+++ b/about.html
@@ -6,10 +6,7 @@ avatar: img/prateek_avtar2.gif
 my-name: Just me and the planets
 
 interests:
-  - Space
-  - Video Games
-  - Physics
-
-education:
-  - school: THE INTERNET SCHOOL OF EVERYTHING
+  - Star gazing
+  - Sci-fiction
+  - Drums and guitar
 ---
