--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: projects
 title: Projects
-header-img: "img/projects.jpg"
+header-img: "img/workshop3.jpg"
 header-mask: rgba(116, 138, 122, 0.4)
 description: Rolls of a salted fish.
 ---
