--- a/projects.html
+++ b/projects.html
@@ -3,5 +3,5 @@ layout: projects
 title: Projects
 header-img: "img/workshop3.jpg"
 header-mask: rgba(116, 138, 122, 0.4)
-description: Rolls of a salted fish.
+description: Tinkering Done here
 ---
