--- a/music.html
+++ b/music.html
@@ -10,11 +10,15 @@ links:
   - type: Playlists
     items:
       - sitename: Heavy Metal Playlist
-        url: https://google.com
+        url: https://open.spotify.com/playlist/0Mn3hYVJmWE4d2lt7dPyYz?si=8ysqr2hSRAqE5_KmuwAyGg&utm_source=whatsapp&nd=1
         img: /img/prateek_avtar2.gif
-        desc: artist1,artist2,artist3......
+        desc: Alter Bridge,Aerosmith,....
       - sitename: EDM Playlist
-        url: https://o5wald.github.io
+        url: https://open.spotify.com/playlist/2DkEvkVEtI7lDuVPKrxOP4?si=4nm0iqDiTgirxDdchQxf6A&utm_source=whatsapp
         img: /img/prateek_avtar2.gif
-        desc: artist1,artist2,artist3......
+        desc: Avicii,Alan Walker,Coldplay....
+      - sitename: Hip-Hop
+        url: https://open.spotify.com/playlist/1druJAGx6RqL6KLnkdrlkP?si=P4UCZEijRI-DPlQ7LHAKaQ&utm_source=whatsapp
+        img: /img/prateek_avtar2.gif
+        desc: 2pac,50cent,Eminem,Ice Cube....
 ---
