--- a/music.html
+++ b/music.html
@@ -19,6 +19,6 @@ links:
         desc: Avicii,Alan Walker,Coldplay....
       - sitename: Hip-Hop
         url: https://open.spotify.com/playlist/1druJAGx6RqL6KLnkdrlkP?si=P4UCZEijRI-DPlQ7LHAKaQ&utm_source=whatsapp
-        img: /img/prateek_avtar2.gif
+        img: /img/hiphop1.gif
         desc: 2pac,50cent,Eminem,Ice Cube....
 ---
