--- a/music.html
+++ b/music.html
@@ -15,7 +15,7 @@ links:
         desc: Alter Bridge,Aerosmith,....
       - sitename: EDM Playlist
         url: https://open.spotify.com/playlist/2DkEvkVEtI7lDuVPKrxOP4?si=4nm0iqDiTgirxDdchQxf6A&utm_source=whatsapp
-        img: /img/prateek_avtar2.gif
+        img: /img/edm2.gif
         desc: Avicii,Alan Walker,Coldplay....
       - sitename: Hip-Hop
         url: https://open.spotify.com/playlist/1druJAGx6RqL6KLnkdrlkP?si=P4UCZEijRI-DPlQ7LHAKaQ&utm_source=whatsapp
