--- a/music.html
+++ b/music.html
@@ -11,7 +11,7 @@ links:
     items:
       - sitename: Heavy Metal Playlist
         url: https://open.spotify.com/playlist/0Mn3hYVJmWE4d2lt7dPyYz?si=8ysqr2hSRAqE5_KmuwAyGg&utm_source=whatsapp&nd=1
-        img: /img/prateek_avtar2.gif
+        img: /img/rock1.gif
         desc: Alter Bridge,Aerosmith,....
       - sitename: EDM Playlist
         url: https://open.spotify.com/playlist/2DkEvkVEtI7lDuVPKrxOP4?si=4nm0iqDiTgirxDdchQxf6A&utm_source=whatsapp
