--- a/music.html
+++ b/music.html
@@ -9,11 +9,11 @@ comment: false
 links:
   - type: Playlists
     items:
-      - sitename: Heavy Metal Playlist
+      - sitename: Heavy Metal
         url: https://open.spotify.com/playlist/0Mn3hYVJmWE4d2lt7dPyYz?si=8ysqr2hSRAqE5_KmuwAyGg&utm_source=whatsapp&nd=1
         img: /img/rock1.gif
         desc: Alter Bridge,Aerosmith,....
-      - sitename: EDM Playlist
+      - sitename: EDM
         url: https://open.spotify.com/playlist/2DkEvkVEtI7lDuVPKrxOP4?si=4nm0iqDiTgirxDdchQxf6A&utm_source=whatsapp
         img: /img/edm1.gif
         desc: Avicii,Alan Walker,Coldplay....
