--- a/offline.html
+++ b/offline.html
@@ -2,7 +2,7 @@
 layout: default
 title: Offline
 hide-in-nav: true
-description: "阅读过的页面可以在离线时访问哦 ;)"
+description: "None"
 header-style: text
 permalink: /offline.html
 ---
@@ -16,7 +16,7 @@ permalink: /offline.html
 <div class="notfound">
 	<div class="error-info">
 		<h1 class="error-emoji"></h1>
-		<p>阅读过的页面可以在离线时访问</p>
+		<p>None</p>
 	</div>
 </div>
 
