--- a/inventory.html
+++ b/inventory.html
@@ -1,7 +1,20 @@
 ---
-layout: inventory
-title: Books
-header-img: "img/workshop3.jpg"
-header-mask: rgba(116, 138, 122, 0.4)
-description: Tinkering Done here
+layout: links
+title: Room of Requirements
+description:
+header-img: "img/library.jpg"
+header-mask: rgba(97, 80, 73, 0.4)
+comment: false
+
+links:
+  - type: Books
+    items:
+      - sitename: Example Book
+        url: https://google.com
+        img: /img/prateek_avtar2.gif
+        desc: Example book
+      - sitename: Example book2
+        url: https://o5wald.github.io
+        img: /img/prateek_avtar2.gif
+        desc: Example book 2
 ---
