--- a/inventory.html
+++ b/inventory.html
@@ -1,4 +1,14 @@
 ---
+layout: projects
+title: Projects
+header-img: "img/workshop3.jpg"
+header-mask: rgba(116, 138, 122, 0.4)
+description: Tinkering Done here
+---
+
+
+
+<!-- ---
 layout: links
 title: Room of Requirements
 description:
@@ -18,3 +28,4 @@ links:
         img: /img/prateek_avtar2.gif
         desc: Example book 2
 ---
+ -->
