--- a/inventory.html
+++ b/inventory.html
@@ -1,9 +1,9 @@
 ---
-layout: projects
-title: Projects
+layout: inventory
+title: Books
 header-img: "img/workshop3.jpg"
 header-mask: rgba(116, 138, 122, 0.4)
-description: Tinkering Done here
+description: Read and explore
 ---
 
 
