--- a/inventory.html
+++ b/inventory.html
@@ -1,9 +1,9 @@
 ---
 layout: inventory
-title: Books
-header-img: "img/workshop3.jpg"
+title: Room of Requirements
+header-img: "img/library.jpg"
 header-mask: rgba(116, 138, 122, 0.4)
-description: Read and explore
+description: 
 ---
 
 
