--- a/links.html
+++ b/links.html
@@ -1,8 +1,8 @@
 ---
 layout: links
 title: Links
-description: When you are looking at the stars, please put the brightest star shining night sky as my soul.
-header-img: "img/links.jpg"
+description: 
+header-img: "img/matrix.jpg"
 header-mask: rgba(97, 80, 73, 0.4)
 comment: false
 
