--- a/music.html
+++ b/music.html
@@ -21,4 +21,8 @@ links:
         url: https://open.spotify.com/playlist/1druJAGx6RqL6KLnkdrlkP?si=P4UCZEijRI-DPlQ7LHAKaQ&utm_source=whatsapp
         img: /img/hiphop1.gif
         desc: 2pac,50cent,Eminem,Ice Cube....
+      - sitename: Lofi
+        url: https://google.com
+        img: /img/hiphop1.gif
+        desc: wormox
 ---
