--- a/music.html
+++ b/music.html
@@ -21,4 +21,8 @@ links:
         url: https://open.spotify.com/playlist/1druJAGx6RqL6KLnkdrlkP?si=P4UCZEijRI-DPlQ7LHAKaQ&utm_source=whatsapp
         img: /img/hiphop1.gif
         desc: 2pac,50cent,Eminem,Ice Cube....
+      - sitename: Code pump
+        url: https://open.spotify.com/playlist/5NE7FOHfXkdmNDrsaaEl9Z?si=85bfe6d4301145b2
+        img: img/6tXM.gif
+        desc: Skrillex,Neffex,NF,Eminem....
 ---
