--- a/music.html
+++ b/music.html
@@ -23,6 +23,6 @@ links:
         desc: 2pac,50cent,Eminem,Ice Cube....
       - sitename: Code pump
         url: https://open.spotify.com/playlist/5NE7FOHfXkdmNDrsaaEl9Z?si=85bfe6d4301145b2
-        img: img/coding_night.gif
+        img: img/coding_dance.gif
         desc: Skrillex,Neffex,NF,Eminem....
 ---
