--- a/music.html
+++ b/music.html
@@ -25,4 +25,8 @@ links:
         url: https://open.spotify.com/playlist/5NE7FOHfXkdmNDrsaaEl9Z?si=85bfe6d4301145b2
         img: /img/coding_dance.gif
         desc: Skrillex,Neffex,NF,Eminem....
+      - sitename: God Complex
+        url: https://open.spotify.com/playlist/418XhxEvuI1lR4zydILK89?si=_5La6yzQRICG-ses8PO0Rg&utm_source=copy-link&nd=1
+        img: /img/Godcomplexthumbnail.gif
+        desc: Gojira,Meshuggah,Lamb of God....
 ---
