--- a/music.html
+++ b/music.html
@@ -27,6 +27,6 @@ links:
         desc: Skrillex,Neffex,NF,Eminem....
       - sitename: God Complex
         url: https://open.spotify.com/playlist/418XhxEvuI1lR4zydILK89?si=_5La6yzQRICG-ses8PO0Rg&utm_source=copy-link&nd=1
-        img: /img/Godcomplexthumbnail.gif
+        img: /img/Godcomplexfinal.gif
         desc: Gojira,Meshuggah,Lamb of God....
 ---
